[tool.poetry]
name = "quantum_samplers"
version = "0.1.0"
description = ""
authors = ["marcsgil <marcosgildeoliveira@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.4.12"
mkdocstrings-python = "^1.7.5"
python-markdown-math = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
