[tool.poetry]
name = "quantum_samplers"
version = "0.1.0"
description = ""
authors = ["marcsgil <marcosgildeoliveira@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
python-markdown-math = "^0.8"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.24.0"}
